k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: huyouan
  labels:
    app: huyouan
